# BMO

./: .gitignore  docker-compose.yml
brain/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  requirements.txt
brain/app/: main.py
brain/app/api/v1/: control.py  talk.py
brain/app/core/: config.py  connections.py  prompt.py  state.py  storage.py
brain/app/db/: client.py  schema.sql
brain/app/nlp/: commands.py  intent.py  responses.py
brain/app/providers/: hf_whisper.py  ollama.py  piper.py  whisper.py  xtts_provider.py
brain/app/services/: brain.py  chat.py  filler.py  logger.py
brain/app/tools/: __init__.py  help_tool.py  registry.py  reminder_tool.py  search_tool.py  time_tool.py  weather_tool.py
brain/app/utils/: audio.py
brain/data/: BMO brain.postman_collection.json  response.json
brain/data/bmo/: concat.txt
brain/static/: index.html
brain/tests/: prep_voice.ps1  run_full_tests.ps1  run_tests.ps1  test_audio.py  test_stream.py
hw-test/: CMakeLists.txt  Makefile  go.mod
hw-test/include/: lwipopts.h
hw-test/infra/: Dockerfile
hw-test/scripts/: deploy.sh
hw-test/src/: main.c
server/: Dockerfile  docker-compose.yml  go.mod  go.sum
server/cmd/: main.go
server/internal/config/: config.go
server/internal/db/: postgres.go  redis.go
server/internal/enums/: api_grp.go
server/internal/handlers/: health_handler.go
server/internal/services/: health_service.go
server/internal/web/: server.go
